# equivariant-vae

./: README.md  pyproject.toml
src/nn/: layers.py
