[project]
name = "eqvae-histo"
version = "0.1.0"
description = "Implementation of Equivariant-VAE"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "HiperMaximus", email = "hipermaximus@gmail.com" }]
license = { text = "Apache License 2.0"}
dependencies = []

[tool.uv.workspace]
members = [
    "python3.13",
]

[tool.ruff]
target-version = "py312"

